workloads/apps/firewall-manager/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: firewall-manager
  labels:
    app: firewall-manager
